// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unsubmit cell does not render for submitted submissions outside of non-Admin user's group 1`] = `"<UnsubmitCell data={{...}} handleUnsubmitSubmission={[Function: handleUnsubmitSubmission]} group=\\"1D\\" role=\\"staff\\" />"`;

exports[`Unsubmit cell does not render for unsubmitted submissions 1`] = `"<UnsubmitCell data={{...}} handleUnsubmitSubmission={[Function: handleUnsubmitSubmission]} group={{...}} role=\\"admin\\" />"`;

exports[`Unsubmit cell renders for submitted submissions belonging to a Staff user's group 1`] = `
"<UnsubmitCell data={{...}} handleUnsubmitSubmission={[Function: handleUnsubmitSubmission]} group=\\"1F\\" role=\\"staff\\">
  <div>
    <Blueprint3.Alert canEscapeKeyCancel={true} canOutsideClickCancel={true} cancelButtonText=\\"Cancel\\" className=\\"unsubmit-alert alert\\" intent=\\"danger\\" onConfirm={[Function]} isOpen={false} onCancel={[Function]} confirmButtonText=\\"OK\\">
      <Blueprint3.Dialog onConfirm={[Function]} isOpen={false} onCancel={[Function]} className=\\"bp3-alert unsubmit-alert alert\\" canEscapeKeyClose={true} canOutsideClickClose={true} onClose={[Function]} portalContainer={[undefined]}>
        <Blueprint3.Overlay onConfirm={[Function]} isOpen={false} onCancel={[Function]} className=\\"bp3-overlay-scroll-container\\" canEscapeKeyClose={true} canOutsideClickClose={true} onClose={[Function]} portalContainer={[undefined]} hasBackdrop={true} autoFocus={true} backdropProps={{...}} enforceFocus={true} lazy={true} transitionDuration={300} transitionName=\\"bp3-overlay\\" usePortal={true} />
      </Blueprint3.Dialog>
    </Blueprint3.Alert>
    <Blueprint3.Button disabled={false} fill={true} intent=\\"none\\" minimal={true} className=\\"\\" type={[undefined]} icon={{...}} onClick={[Function]}>
      <button type={[undefined]} disabled={[undefined]} className=\\"bp3-button bp3-fill bp3-minimal\\" onClick={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} tabIndex={[undefined]}>
        <Blueprint3.Icon icon={{...}}>
          <Blueprint3.Icon icon=\\"arrow-left\\" color={[undefined]}>
            <span icon=\\"arrow-left\\" className=\\"bp3-icon bp3-icon-arrow-left\\" title={[undefined]}>
              <svg fill={[undefined]} data-icon=\\"arrow-left\\" width={16} height={16} viewBox=\\"0 0 16 16\\">
                <desc>
                  arrow-left
                </desc>
                <path d=\\"M13.99 6.99H4.41L7.7 3.7a1.003 1.003 0 00-1.42-1.42l-5 5a1.014 1.014 0 000 1.42l5 5a1.003 1.003 0 001.42-1.42L4.41 8.99H14c.55 0 1-.45 1-1s-.46-1-1.01-1z\\" fillRule=\\"evenodd\\" />
              </svg>
            </span>
          </Blueprint3.Icon>
        </Blueprint3.Icon>
        <Blueprint3.Icon icon={[undefined]} />
      </button>
    </Blueprint3.Button>
  </div>
</UnsubmitCell>"
`;

exports[`Unsubmit cell renders for submitted submissions for Admin users regardless of group 1`] = `
"<UnsubmitCell data={{...}} handleUnsubmitSubmission={[Function: handleUnsubmitSubmission]} group={{...}} role=\\"admin\\">
  <div>
    <Blueprint3.Alert canEscapeKeyCancel={true} canOutsideClickCancel={true} cancelButtonText=\\"Cancel\\" className=\\"unsubmit-alert alert\\" intent=\\"danger\\" onConfirm={[Function]} isOpen={false} onCancel={[Function]} confirmButtonText=\\"OK\\">
      <Blueprint3.Dialog onConfirm={[Function]} isOpen={false} onCancel={[Function]} className=\\"bp3-alert unsubmit-alert alert\\" canEscapeKeyClose={true} canOutsideClickClose={true} onClose={[Function]} portalContainer={[undefined]}>
        <Blueprint3.Overlay onConfirm={[Function]} isOpen={false} onCancel={[Function]} className=\\"bp3-overlay-scroll-container\\" canEscapeKeyClose={true} canOutsideClickClose={true} onClose={[Function]} portalContainer={[undefined]} hasBackdrop={true} autoFocus={true} backdropProps={{...}} enforceFocus={true} lazy={true} transitionDuration={300} transitionName=\\"bp3-overlay\\" usePortal={true} />
      </Blueprint3.Dialog>
    </Blueprint3.Alert>
    <Blueprint3.Button disabled={false} fill={true} intent=\\"none\\" minimal={true} className=\\"\\" type={[undefined]} icon={{...}} onClick={[Function]}>
      <button type={[undefined]} disabled={[undefined]} className=\\"bp3-button bp3-fill bp3-minimal\\" onClick={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} tabIndex={[undefined]}>
        <Blueprint3.Icon icon={{...}}>
          <Blueprint3.Icon icon=\\"arrow-left\\" color={[undefined]}>
            <span icon=\\"arrow-left\\" className=\\"bp3-icon bp3-icon-arrow-left\\" title={[undefined]}>
              <svg fill={[undefined]} data-icon=\\"arrow-left\\" width={16} height={16} viewBox=\\"0 0 16 16\\">
                <desc>
                  arrow-left
                </desc>
                <path d=\\"M13.99 6.99H4.41L7.7 3.7a1.003 1.003 0 00-1.42-1.42l-5 5a1.014 1.014 0 000 1.42l5 5a1.003 1.003 0 001.42-1.42L4.41 8.99H14c.55 0 1-.45 1-1s-.46-1-1.01-1z\\" fillRule=\\"evenodd\\" />
              </svg>
            </span>
          </Blueprint3.Icon>
        </Blueprint3.Icon>
        <Blueprint3.Icon icon={[undefined]} />
      </button>
    </Blueprint3.Button>
  </div>
</UnsubmitCell>"
`;
